hphp/hack/test/typecheck/reactive/nonrx5.php.exp
File "nonrx5.php", line 5, characters 8-30:
Invalid argument list for __NonRx attribute that is placed on anonymous function. Argument list for __NonRx attribute that is used in this position should be empty. (Parsing[1002])
