hphp/hack/test/typecheck/reactive/nonrx5.php
<?hh // partial

<<__Rx>>
function f(): void {
  $a = <<__NonRx("?")>>() ==> 1;
}
